@@ -3,6 +3,7 @@ package io.mosip.bioextractor.service.helper;
 import static org.junit.Assert.assertArrayEquals;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 import org.junit.Test;
@@ -17,7 +18,6 @@ import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.web.context.WebApplicationContext;
 
 import io.mosip.bioextractor.exception.BiometricExtractionException;
-import io.mosip.bioextractor.service.helper.BioExtractionHelper;
 import io.mosip.kernel.biosdk.provider.factory.BioAPIFactory;
 import io.mosip.kernel.biosdk.provider.spi.iBioProviderApi;
 import io.mosip.kernel.core.cbeffutil.entity.BDBInfo;
@@ -47,7 +47,7 @@ public class BioExtractionHelperTest {
 		
 		Mockito.when(cbeffUtil.getBIRDataFromXML(cbeffContent)).thenReturn((List<BIRType>) Mockito.mock(List.class));
 		List<BIR> listBir = new ArrayList<>();
-		BIR bir= new BIR.BIRBuilder().withBdbInfo(new BDBInfo.BDBInfoBuilder().withType(List.of(SingleType.FINGER)).build()).build();
+		BIR bir= new BIR.BIRBuilder().withBdbInfo(new BDBInfo.BDBInfoBuilder().withType(Collections.singletonList(SingleType.FINGER)).build()).build();
 		listBir.add(bir);
 		Mockito.when(cbeffUtil.convertBIRTypeToBIR(Mockito.any())).thenReturn(listBir);
 		
@@ -69,7 +69,7 @@ public class BioExtractionHelperTest {
 		
 		Mockito.when(cbeffUtil.getBIRDataFromXML(cbeffContent)).thenReturn((List<BIRType>) Mockito.mock(List.class));
 		List<BIR> listBir = new ArrayList<>();
-		BIR bir= new BIR.BIRBuilder().withBdbInfo(new BDBInfo.BDBInfoBuilder().withType(List.of(SingleType.FINGER)).build()).build();
+		BIR bir= new BIR.BIRBuilder().withBdbInfo(new BDBInfo.BDBInfoBuilder().withType(Collections.singletonList(SingleType.FINGER)).build()).build();
 		listBir.add(bir);
 		Mockito.when(cbeffUtil.convertBIRTypeToBIR(Mockito.any())).thenReturn(listBir);
 		
